<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.myappportfolio.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/my_nanodegree_apps"
            android:textSize="22sp" />

        <Button
            style="@style/Button_style"
            android:onClick="popularMovies"
            android:text="@string/popular_movies" />

        <Button
            style="@style/Button_style"
            android:onClick="stockHawk"
            android:text="@string/stock_hawk" />

        <Button
            style="@style/Button_style"
            android:onClick="buildItBigger"
            android:text="@string/build_it_bigger" />

        <Button
            style="@style/Button_style"
            android:onClick="makeYourAppMaterial"
            android:text="@string/make_your_app_material" />

        <Button
            style="@style/Button_style"
            android:onClick="goUbi"
            android:text="@string/go_ubiquitous" />

        <Button
            style="@style/Button_style"
            android:onClick="capstone"
            android:text="@string/capstone" />

    </LinearLayout>
</ScrollView>